fix: z-index slide bug

--- a/web/src/styles/_vars.scss
+++ b/web/src/styles/_vars.scss
@@ -4,7 +4,9 @@
 
 	--nav-height: 3.5rem;
 
-	--z-curtain: 10;
-	--z-main: 15;
-	--z-nav: 20;
+	--z-main-above-curtain: 30;
+	--z-curtain: 20;
+	--z-main-below-curtain: 10;
+
+	--z-nav: 40;
 }
